feat: add Community entitlement foundation
